--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@dice-roller/rpg-dice-roller": "^5.5.1",
     "@tailwindcss/vite": "^4.1.13",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.3",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.13"
   },
